# Image-hosting

./: .env  .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml  python-1.md  requirements.txt
app/: 1.py  app.py  conf.py  database.py  dockerfile  http_handler.py  requirements.txt  utils.py
static/: index.html
static/form/: images.html  upload.html
static/image-uploader/css/: reset.css  style.css
static/image-uploader/js/: images.js  index.js  upload.js
