[project]
name = "image-host"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests-toolbelt>=1.0.0",
    "schedule>=1.2.2",
]
